--- a/login.html
+++ b/login.html
@@ -103,6 +103,16 @@
         By signing in, you agree to Chronos Protocol terms.
       </p>
     </div>
+
+    <!-- Executive Brief -->
+    <div class="mt-10 text-center text-white/40 text-xs font-light tracking-wide" style="letter-spacing: 0.08em;">
+      <p class="max-w-sm mx-auto leading-relaxed">
+        Chronos Protocol is a private intelligence layer for executive longevity. We eliminate the gap between clinical data and daily performance.
+      </p>
+      <p class="mt-4 text-white/35 tracking-widest">
+        Reactive medicine is obsolete. Autonomous optimization is the standard.
+      </p>
+    </div>
   </div>
 
   <!-- Supabase: load first so it's ready before we create the client -->
