--- a/dashboard.html
+++ b/dashboard.html
@@ -118,14 +118,18 @@
     <div class="w-full max-w-md rounded-2xl border border-white/10 bg-carbon/80 shadow-2xl p-10 md:p-12 text-center" style="box-shadow: 0 0 0 1px rgba(255,255,255,0.05), 0 25px 50px -12px rgba(0,0,0,0.5);">
       <div id="membership-overlay-title" class="text-white/90 text-2xl font-semibold tracking-widest mb-6" style="font-family: 'Syne', sans-serif;">CHRONOS</div>
       <p class="text-white/70 text-sm font-light leading-relaxed mb-6">Founding Member Access Only. Your personalized longevity protocol is ready, but your membership is inactive.</p>
-      <div class="mb-8">
-        <label for="invite-code-input" class="block text-white/50 text-xs font-medium tracking-wider uppercase mb-2">Invite Code</label>
-        <input type="text" id="invite-code-input" placeholder="Enter code" autocomplete="off" class="w-full px-4 py-3 rounded-lg bg-white/5 border border-white/10 text-white placeholder-white/30 text-sm font-light focus:outline-none focus:border-sage/50 focus:ring-1 focus:ring-sage/30 transition-colors">
-        <p id="invite-code-hint" class="mt-2 text-white/40 text-xs font-light hidden">Invalid code.</p>
-      </div>
       <button type="button" id="membership-activate-btn" class="font-digital-sage w-full py-4 px-6 rounded-xl bg-sage text-carbon text-lg font-semibold tracking-wide hover:bg-sage/90 focus:outline-none focus:ring-2 focus:ring-sage focus:ring-offset-2 focus:ring-offset-carbon transition-all duration-200">
         Activate Protocol — $2,000/mo
       </button>
+      <div class="mt-5">
+        <button type="button" id="invite-code-toggle" class="text-white/40 text-xs font-light tracking-wide hover:text-sage/80 transition-colors underline underline-offset-2">
+          Have an invite code?
+        </button>
+        <div id="invite-code-block" class="mt-4 hidden">
+          <input type="text" id="invite-code-input" placeholder="Enter code" autocomplete="off" class="w-full px-4 py-2.5 rounded-lg bg-white/5 border border-white/10 text-white placeholder-white/30 text-sm font-light focus:outline-none focus:border-sage/50 focus:ring-1 focus:ring-sage/30 transition-colors">
+          <p id="invite-code-hint" class="mt-2 text-white/40 text-xs font-light hidden">Invalid code.</p>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -540,6 +544,9 @@
   <div id="lab-toast" class="fixed top-24 right-6 md:right-10 z-[150] hidden max-w-sm rounded-xl border border-sage/30 glass px-5 py-4 shadow-lg" role="alert">
     <p id="lab-toast-msg" class="text-[#E5E7EB] text-sm font-light"></p>
   </div>
+  <div id="member-success-toast" class="fixed top-24 right-6 md:right-10 z-[150] hidden max-w-sm rounded-xl border border-sage/40 glass px-5 py-4 shadow-lg" role="status">
+    <p class="text-sage text-sm font-medium">Founding Member Identity Verified. Welcome to Chronos.</p>
+  </div>
 
   <!-- Review My Stack overlay -->
   <div id="stack-review-overlay" class="fixed inset-0 z-[200] hidden flex items-center justify-center p-4 md:p-8 bg-carbon/90 backdrop-blur-sm" aria-hidden="true">
@@ -593,6 +600,10 @@
       }
 
       var isMember = false;
+      try {
+        if (localStorage.getItem('chronos_isMember') === 'true') isMember = true;
+      } catch (e) {}
+
       var STRIPE_CHECKOUT_URL = 'https://checkout.stripe.com/placeholder';
 
       function applyMembershipOverlay() {
@@ -617,9 +628,30 @@
           });
         }
 
+        var inviteToggle = document.getElementById('invite-code-toggle');
+        var inviteBlock = document.getElementById('invite-code-block');
         var inviteInput = document.getElementById('invite-code-input');
         var inviteHint = document.getElementById('invite-code-hint');
-        var FOUNDER_CODE = 'CHRONOS_FOUNDER';
+        var successToast = document.getElementById('member-success-toast');
+        var FOUNDER_CODE = 'FOUNDER_2026';
+
+        if (inviteToggle && inviteBlock) {
+          inviteToggle.addEventListener('click', function() {
+            inviteBlock.classList.toggle('hidden');
+            if (!inviteBlock.classList.contains('hidden') && inviteInput) inviteInput.focus();
+          });
+        }
+
+        function acceptInviteCode() {
+          isMember = true;
+          try { localStorage.setItem('chronos_isMember', 'true'); } catch (e) {}
+          applyMembershipOverlay();
+          if (successToast) {
+            successToast.classList.remove('hidden');
+            setTimeout(function() { successToast.classList.add('hidden'); }, 6000);
+          }
+        }
+
         if (inviteInput) {
           inviteInput.addEventListener('input', function() {
             if (inviteHint) inviteHint.classList.add('hidden');
@@ -627,8 +659,7 @@
           inviteInput.addEventListener('blur', function() {
             var code = inviteInput.value ? inviteInput.value.trim() : '';
             if (code === FOUNDER_CODE) {
-              isMember = true;
-              applyMembershipOverlay();
+              acceptInviteCode();
             } else if (code.length > 0 && inviteHint) {
               inviteHint.classList.remove('hidden');
             }
@@ -637,8 +668,7 @@
             if (e.key === 'Enter') {
               var code = inviteInput.value ? inviteInput.value.trim() : '';
               if (code === FOUNDER_CODE) {
-                isMember = true;
-                applyMembershipOverlay();
+                acceptInviteCode();
               } else if (code.length > 0 && inviteHint) {
                 inviteHint.classList.remove('hidden');
               }
